--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "form-validation",
+  "homepage": "https://devpatel707.github.io/Celebal_Week_1_Form_validation",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,6 +14,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+     "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
